--- a/.env.dev
+++ b/.env.dev
@@ -3,7 +3,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 # Configurações de conexão com o banco de dados remoto
 DB_HOST=localhost
 DB_DATABASE='swiftspace'
-DB_USER='root'
+DB_USER='app'
 DB_PASSWORD='211004'
 DB_PORT=3306
 
