--- a/.env.dev
+++ b/.env.dev
@@ -2,10 +2,10 @@ AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados remoto
 DB_HOST=localhost
-DB_DATABASE='swiftspace'
-DB_USER='app'
-DB_PASSWORD='211004'
-DB_PORT=3306
+DB_DATABASE=''
+DB_USER=''
+DB_PASSWORD=''
+DB_PORT=3307    
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
